Implemented Nwewsletter form and backend, and donate backend
