# controllers/Event.js
@@ -3,12 +3,12 @@
 var utils = require('../utils/writer.js');
 var Event = require('../service/EventService');
 
-module.exports.eventsGET = function eventsGET (req, res, next) {
+module.exports.getEvents = function getEvents (req, res, next) {
   var offset = req.swagger.params['offset'].value;
   var limit = req.swagger.params['limit'].value;
   var country = req.swagger.params['country'].value;
   var month = req.swagger.params['month'].value;
-  Event.eventsGET(offset,limit,country,month)
+  Event.getEvents(offset,limit,country,month)
     .then(function (response) {
       utils.writeJson(res, response);
     })
