# controllers/Location.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var Location = require('../service/LocationService');
 
-module.exports.locationsGET = function locationsGET (req, res, next) {
-  Location.locationsGET()
+module.exports.getLocations = function locationsGET (req, res, next) {
+  Location.getLocations()
     .then(function (response) {
       utils.writeJson(res, response);
     })
