# controllers/Person.js
@@ -14,10 +14,10 @@ module.exports.getPersonById = function getPersonById (req, res, next) {
     });
 };
 
-module.exports.personsGET = function personsGET (req, res, next) {
+module.exports.getPersons = function personsGET (req, res, next) {
   var offset = req.swagger.params['offset'].value;
   var limit = req.swagger.params['limit'].value;
-  Person.personsGET(offset,limit)
+  Person.getPersons(offset,limit)
     .then(function (response) {
       utils.writeJson(res, response);
     })
