# service/DonateService.js
@@ -1,15 +1,5 @@
 'use strict';
 
-
-/**
- * Donation form
- * A really simplified endpoint imitating donation service.
- *
- * amount Double 
- * message String 
- * no response value expected for this operation
- **/
-
 let sqlDb;
 
 exports.donateDbSetup = function(s) {
@@ -23,9 +13,29 @@ exports.donateDbSetup = function(s) {
     })
 }
 
-exports.donatePOST = function(amount,message) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
+/**
+ * Donation form
+ * A really simplified endpoint imitating donation service.
+ *
+ * amount Double 
+ * message String 
+ * no response value expected for this operation
+ **/
+exports.donatePost = function(amount, message) {
+    return sqlDb('donation').insert({amount: amount, practical_info: message}).then(rsp => {
+        return {};
+    });
+    
+}
+
+
+/**
+ * Get all donations
+ * An endpoint that allows to see all donations.
+ *
+ * returns List
+ **/
+exports.getDonations = function() {
+  return sqlDb('donation');
 }
 
