# service/NewsletterService.js
@@ -1,19 +1,11 @@
 'use strict';
 
 
-/**
- * Newsletter signup
- * An endpoint that allows a visitor to signup to the newsletter.
- *
- * email String 
- * no response value expected for this operation
- **/
-
 let sqlDb;
 
 exports.newsletterDbSetup = function(s) {
     sqlDb = s;
-    return sqlDb.schema.hasTable('newsletter_signups').then(exists => {
+    return sqlDb.schema.hasTable('donation').then(exists => {
         if (!exists) {
             console.log('Newsletter table does not exists.');
         } else {
@@ -22,10 +14,27 @@ exports.newsletterDbSetup = function(s) {
     })
 }
 
+/**
+ * Get all newsletter signups
+ * An endpoint that allows to see all newsletter signups.
+ *
+ * returns List
+ **/
+exports.getNewsletterSignups = function() {
+  return sqlDb('newsletter_signups');
+}
 
+
+/**
+ * Newsletter signup
+ * An endpoint that allows a visitor to signup to the newsletter.
+ *
+ * email String 
+ * no response value expected for this operation
+ **/
 exports.newsletterSignup = function(email) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
+    return sqlDb('newsletter_signups').insert({email: email}).then(rsp => {
+        return {};
+    });
 }
 
